Correct Sonar Issues